--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,7 +24,18 @@ jobs:
       - name: Extract the Caddy version numbers from the Dockerfile
         run: bash .github/version_extractor.sh ./Dockerfile >> $GITHUB_ENV
 
-      - name: Build the Docker image
-        run: |
-          docker build . --file Dockerfile \
-            --tag "axistools/caddy-bundle:${{ env.CADDY_MAJOR }}.${{ env.CADDY_MINOR }}.${{ env.CADDY_PATCH }}"
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: |
+            axistools/caddy-bundle:${{ env.CADDY_MAJOR }}.${{ env.CADDY_MINOR }}.${{ env.CADDY_PATCH }}
+            axistools/caddy-bundle:${{ env.CADDY_MAJOR }}.${{ env.CADDY_MINOR }}
+            axistools/caddy-bundle:${{ env.CADDY_MAJOR }}
+            axistools/caddy-bundle:latest
